# filmmaker-rf-ate

./: .gitignore  README.md  config.yaml  example.yaml  poetry.toml  pyproject.toml
filmmaker_rf_ate/: config.py  get_devices.py  utils.py
filmmaker_rf_ate/arduino/: arduino.py
filmmaker_rf_ate/config/: __init__.py  config.py
filmmaker_rf_ate/config/tests/: __init__.py  tests.py
filmmaker_rf_ate/gui/: custom_widgets.py  filmmaker2rf.kv  gui.py
filmmaker_rf_ate/gui/graphics/: colours.py
filmmaker_rf_ate/tests/: __init__.py  battery_test.py  connection_stats_test.py  firmware_version_test.py  nvm_test.py  rf_power_test.py  rfid_assignment_test.py  test_factory.py
filmmaker_rf_ate/utils/: __init__.py  get_devices.py
