[tool.poetry]
name = "filmmaker-rf-ate"
version = "0.1.0"
description = "ATE app for Filmaker 2 RF tests"
authors = ["jsim-rode <jordan.sim@rode.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.7"

[tool.poetry.dependencies]
python = "^3.10"
functional-test-core = {git = "git@github.com:freedmanelectronics/functional-test-core.git", rev = "0.4.1"}
pyserial = "^3.5"
kivy = "^2.3.0"
pyaml = "^24.9.0"
rfid-server = {git = "git@github.com:freedmanelectronics/RFID_Server.git", rev = "poetry"}
hidapi = "0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "anydev-gitlab"
url = "https://gitlab.anydev.au/api/v4/projects/1/packages/pypi/simple"
priority = "explicit"

